--- a/_sass/layout/_l-map.scss
+++ b/_sass/layout/_l-map.scss
@@ -6,6 +6,10 @@
   right: 0;
   background-color: $bg-color-1;
 
+  .leaflet-bar{
+    border: 0px;
+  }
+
   .btn-share {
     position: absolute;
     top: rem(135px);
